#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2002				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Wed Apr 24 09:50:44 EDT 2002
#
#	Description:	libI2util build description.

include $(top_srcdir)/config/Make-rules

lib_LIBRARIES		= libI2util.a
libI2util_a_SOURCES	= ErrLog.c ErrLogImmediate.c ErrLogSyslog.c Options.c \
			Pthread.c mach_dep.c mach_dep.h optionsP.h table.c \
			random.c io.c saddr.c
