#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2003				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Thu Dec 18 14:28:42 MST 2003
#
#	Description:

INCLUDES	= $(I2UTILINCS)

bin_PROGRAMS		= aespasswd
aespasswd_SOURCES	= aespasswd.c
aespasswd_LDADD		= $(I2UTILLIBS) $(MALLOCDEBUGLIBS)
aespasswd_DEPENDENCIES	= $(I2UTILLIBDEPS)

