#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2006				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Fri Oct 20 13:01:03 MDT 2006
#
#	Description:

INCLUDES	= $(I2UTILINCS)

bin_PROGRAMS		= pfstore
pfstore_SOURCES	= pfstore.c
pfstore_LDADD		= $(I2UTILLIBS) $(MALLOCDEBUGLIBS)
pfstore_DEPENDENCIES	= $(I2UTILLIBDEPS)

