#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2006				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Fri Oct 20 13:01:03 MDT 2006
#
#	Description:

AM_CPPFLAGS	= $(I2UTILINCS)

bin_PROGRAMS		= pfstore
pfstore_SOURCES	= pfstore.c
pfstore_LDADD		= $(I2UTILLIBS) $(MALLOCDEBUGLIBS)
pfstore_DEPENDENCIES	= $(I2UTILLIBDEPS)

# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
